@@ -1,3 +1,7 @@
+2016-03-30  Werner Lemberg  <wl@gnu.org>
+
+	* src/pfr/pfrload.c (pfr_aux_name_load): Fix memory leak (#47567).
+
 2016-03-29  Werner Lemberg  <wl@gnu.org>
 
 	* src/base/ftadvance.c (FT_Get_Advances): Fix invalid left shift.
